--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URL= mongodb+srv://TODO:Yash1234@cluster0.8ktzz.mongodb.net/TODO?retryWrites=true&w=majority;
+MONGO_URL= mongodb+srv://TODO:Yash1234@cluster0.8ktzz.mongodb.net/TODO?retryWrites=true&w=majority
